Fixed button rendering on mobile.

--- a/axelor-web/src/main/webapp/css/webkit.mobile.css
+++ b/axelor-web/src/main/webapp/css/webkit.mobile.css
@@ -23,6 +23,7 @@ body {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.record-pager .btn,
 .record-toolbar button {
 	padding: 6px 12px 2px;
 }
